# Copyright © 2024 ANSYS, Inc. Unauthorized use, distribution, or duplication is prohibited.
[build-system]
requires = [
  "setuptools >= 80.9.0",
  "wheel",
  "ansys_tools_protoc_helper == 0.5.0",
  "grpcio-tools == 1.56.0",       # grpcio-tools compatible with protobuf 4.x, required for .proto compiling
  "protobuf == 4.21.12"           # ansys-tools-protoc-helper 0.5.0 depends on protobuf 4.21.12
]
build-backend = "setuptools.build_meta:__legacy__"