# Copyright © 2024 ANSYS, Inc. Unauthorized use, distribution, or duplication is prohibited.
[build-system]
requires = [
  "setuptools >= 80.9.0",
  "wheel",
  "ansys_tools_protoc_helper == 0.5.0",
  "grpcio-tools == 1.49.1",       # required by ansys-tools-protoc-helper
  "protobuf == 4.21.12"           # required by ansys-tools-protoc-helper
]
build-backend = "setuptools.build_meta:__legacy__"