# Copyright © 2026 ANSYS, Inc. Unauthorized use, distribution, or duplication is prohibited.
[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "your-package"
requires-python = ">=3.9,<4.0"
dependencies = [
  "protobuf >= 6.31.1", < 7.0.0,
  "grpcio >= 1.76", < 2.0.0, # Python 3.13-compatible wheels
  "grpcio-tools >= 1.76"     # Python 3.13-compatible wheels
]
